Use different `source_files` for different platforms instead of subspecs

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -15,5 +15,5 @@ end
 target 'macOS-Example' do
   platform :osx, '10.13'
 
-  pod 'LeakChecker', :path => '../', :subspecs => ['Core']
+  pod 'LeakChecker', :path => '../'
 end
